--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -1,12 +1,12 @@
-@charset "UTF-8";
 #home {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  color: #fff;
 }
 #home .stage {
-  height: 150px;
+  height: 280px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,13 +14,15 @@
 }
 #home h2 {
   font-family: var(--mainEng-font);
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 1px;
-  color: #fff;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
+  text-transform: uppercase;
 }
 #home h2 span {
-  display: inline-block; /* SplitText가 생성한 텍스트 조각의 기본 스타일 */
-  color: inherit; /* 부모 요소의 color를 상속 */
+  display: inline-block;
+  color: inherit;
 }
 #home .dots {
   width: 50px;
@@ -32,19 +34,18 @@
   justify-content: center;
 }
 #home .dots .dot {
-  background-color: var(--subColor200-color);
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
   margin: 10px auto;
 }
 #home p {
   line-height: 1.5;
-  color: var(--subColor100-color);
-  font-family: var(--mainKorM-font);
+  font-family: var(--mainKorL-font);
   letter-spacing: 1.2px;
 }
 #home p em {
-  color: var(--mainColor100-color);
-  font-family: var(--mainKorB-font);
+  color: #30F0E2;
+  font-family: var(--mainKorSB-font);
 }
 
 @media (max-width: 767px) {
@@ -67,7 +68,7 @@
 }
 @media (min-width: 1024px) {
   #home h2 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
   #home p {
     font-size: 1.3rem;
