--- a/src/css/base/font.css
+++ b/src/css/base/font.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-/*   font-family: "Noto Sans", sans-serif; */
-/*font-family: "Poppins", sans-serif; */
-/* font-family: "EB Garamond", serif; */
-
+/*   font-family: "Roboto", sans-serif; */
+/* font-family: "Anton", sans-serif; */
 
 @font-face {
     font-family: 'Pretendard-Thin';
