--- a/src/css/pages/graphic.css
+++ b/src/css/pages/graphic.css
@@ -11,9 +11,8 @@
 #graphic .graphic__wrap {
   display: flex;
   align-items: center;
-  width: 200%;
   gap: 100px;
-  margin-top: 180px;
+  margin-top: 230px;
   padding-left: 120px;
 }
 #graphic article.graphic__item {
@@ -22,6 +21,10 @@
   cursor: pointer;
   border: 2px solid rgba(255, 255, 255, 0.5);
   padding: 15px;
+  transition: 0.35s;
+}
+#graphic article.graphic__item:hover {
+  border: 2px solid rgb(48, 240, 226);
 }
 #graphic article.graphic__item:hover a::after {
   opacity: 1;
@@ -33,7 +36,7 @@
   transform: scale(1.1);
 }
 #graphic article.graphic__item:hover .num em {
-  color: rgb(255, 255, 255);
+  color: rgb(48, 240, 226);
 }
 #graphic article.graphic__item a {
   position: relative;
@@ -62,8 +65,8 @@
   right: 0px;
   top: -45px;
   font-family: var(--mainNum-font);
-  font-size: 38px;
-  color: rgba(255, 255, 255, 0.5);
+  font-size: 32px;
+  color: rgba(255, 255, 255, 0.2);
   font-weight: 600;
   z-index: 99;
 }
@@ -146,5 +149,21 @@
   }
   100% {
     transform: translate3d(85px, 0, 0);
+  }
+}
+
+@media (max-width: 767px) {
+  #graphic .graphic__wrap {
+    width: 270%;
+  }
+}
+@media (min-width: 768px) {
+  #graphic .graphic__wrap {
+    width: 250%;
+  }
+}
+@media (min-width: 1024px) {
+  #graphic .graphic__wrap {
+    width: 200%;
   }
 }
