--- a/src/css/pages/header.css
+++ b/src/css/pages/header.css
@@ -4,96 +4,69 @@
   top: 0;
   z-index: 999;
   width: 100%;
+  height: 50px;
   font-family: var(--mainEng-font);
 }
-#header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(213, 239, 250, 0.1);
-  backdrop-filter: blur(30px);
-  z-index: -1;
-}
-#header .header_inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-}
-#header .header_inner .header_logo {
-  font-family: var(--mainEng-font);
-  font-weight: 500;
-  font-size: 1.2rem;
+#header .header_nav {
   text-align: center;
-  text-transform: uppercase;
-  line-height: 1.2;
 }
-#header .header_inner .header_logo em {
-  text-transform: capitalize;
-  font-size: 13px;
-  display: block;
-  color: var(--mainColor100-color);
-}
-#header .header_inner .header_logo li {
-  display: none;
-}
-#header .header_inner .header_logo li.intro_logo {
-  display: block;
-}
-#header .header_inner .header_nav {
-  margin-right: 50px;
-}
-#header .header_inner .header_nav li {
+#header .header_nav ul li {
   display: inline-block;
-  font-family: var(--mainEng-font);
-  font-weight: 500;
 }
-#header .header_inner .header_nav li a {
-  text-transform: uppercase;
-  font-size: 20px;
-  font-weight: 600;
-  padding: 15px;
+#header .header_nav ul li:hover a {
+  color: rgba(255, 255, 255, 0.7);
+}
+#header .header_nav ul li a {
   position: relative;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.4);
+  text-transform: uppercase;
+  display: block;
+  font-family: var(--mainEng-font);
+  letter-spacing: 0.2em;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 15px;
+  transition: 0.35s;
 }
-#header .header_inner .header_nav li a.on {
-  color: var(--white);
-}
-#header .header_inner .header_nav li a::before {
+#header .header_nav ul li a::before {
   content: "";
   width: calc(100% - 20px);
-  height: 2px;
-  background-color: var(--white);
+  height: 1px;
+  background-color: var(--mainColor-color);
   position: absolute;
   left: 10px;
-  bottom: 10px;
+  bottom: 5px;
   transition: 0.35s;
   transform: scaleX(0);
 }
-#header .header_inner .header_nav li a:hover::before {
+#header .header_nav ul li a:hover::before {
   transform: scaleX(1);
 }
-#header .header_inner .header_nav li a.on::before {
+#header .header_nav ul li a.on {
+  color: var(--mainColor-color);
+}
+#header .header_nav ul li a.on::before {
   transform: scaleX(1);
 }
-#header .header_inner .header_nav_mobile {
+#header .header_nav_mobile {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
   opacity: 0;
   width: 40px;
   height: 40px;
   cursor: pointer;
 }
-#header .header_inner .header_nav_mobile span {
+#header .header_nav_mobile span {
+  position: relative;
   display: block;
   width: 40px;
   height: 2px;
   background-color: var(--white);
-  position: relative;
   margin-top: 20px;
 }
-#header .header_inner .header_nav_mobile span::before {
+#header .header_nav_mobile span::before {
   content: "";
   width: 40px;
   height: 2px;
@@ -102,7 +75,7 @@
   top: 10px;
   right: 0;
 }
-#header .header_inner .header_nav_mobile span::after {
+#header .header_nav_mobile span::after {
   content: "";
   width: 40px;
   height: 2px;
@@ -113,36 +86,36 @@
 }
 
 @media (max-width: 767px) {
-  #header .header_inner .header_nav {
+  #header .header_nav {
     display: none;
   }
-  #header .header_inner .header_nav.show {
+  #header .header_nav.show {
     display: block;
   }
-  #header .header_inner .header_nav.show ul {
+  #header .header_nav.show ul {
     position: absolute;
     right: 0;
-    top: 68px;
-    background: var(--mainColor100-color);
+    top: 50px;
+    background: rgba(0, 0, 0, 0.5);
     z-index: 999;
     min-width: 150px;
     padding: 20px 10px;
   }
-  #header .header_inner .header_nav.show ul + #header .header_inner .header_nav_mobile span::before {
+  #header .header_nav.show ul + #header .header_nav_mobile span::before {
     width: 20px;
   }
-  #header .header_inner .header_nav.show ul + #header .header_inner .header_nav_mobile span::after {
+  #header .header_nav.show ul + #header .header_nav_mobile span::after {
     width: 20px;
   }
-  #header .header_inner .header_nav.show ul li {
+  #header .header_nav.show ul li {
     display: block;
     text-align: right;
   }
-  #header .header_inner .header_nav.show ul li a {
+  #header .header_nav.show ul li a {
     display: inline-block;
     padding: 10px;
   }
-  #header .header_inner .header_nav_mobile {
+  #header .header_nav_mobile {
     opacity: 1;
   }
 }
