--- a/src/css/pages/project.css
+++ b/src/css/pages/project.css
@@ -1,13 +1,13 @@
+#project .project_title {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
 #project .project-box {
   position: relative;
-  top: 250px;
-  height: 70vh;
-  display: flex;
-  justify-content: space-between;
-}
-#project .project-box > div {
-  position: relative;
-  overflow: hidden;
+  width: 100%;
   text-transform: capitalize;
 }
 #project .tabs {
@@ -15,15 +15,10 @@
 }
 #project .tabs .tab-menu {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 #project .tabs .tab-menu li a {
   display: block;
-  width: 200px;
   padding: 20px;
-  font-size: 1.5rem;
   color: rgba(255, 255, 255, 0.5);
   letter-spacing: 1px;
   transition: 0.5s;
@@ -31,8 +26,7 @@
   white-space: nowrap;
 }
 #project .tabs .tab-menu li a.on {
-  font-size: 2rem;
-  color: #ffffff;
+  color: #fff;
   font-weight: bold;
 }
 #project .hSwiper .project {
@@ -40,7 +34,7 @@
   bottom: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
-  width: 90%;
+  width: 85%;
   overflow: hidden;
 }
 #project .hSwiper .project figure::after {
@@ -78,7 +72,7 @@
   font-weight: 600;
   padding: 10px 20px;
   background-color: rgba(255, 255, 255, 0.5);
-  color: var(--mainColor100-color);
+  color: var(--mainColor-color);
   border-radius: 50px;
   text-transform: capitalize;
 }
@@ -97,12 +91,9 @@
   width: 100%;
   object-fit: cover;
 }
-#project #vslide {
-  align-items: center;
-  justify-content: center;
-}
 #project #vslide .vSwiper {
   height: 100%;
+  margin: 0;
 }
 #project #vslide .vSwiper .swiper-slide {
   display: flex;
@@ -111,7 +102,7 @@
 }
 #project #vslide .vSwiper .swiper-slide h2 {
   font-family: var(--mainEng-font);
-  font-size: 2.5rem;
+  color: #30F0E2;
   font-weight: 600;
   line-height: 1.5;
   letter-spacing: 1px;
@@ -123,7 +114,6 @@
 #project #vslide .vSwiper .swiper-slide .project_desc li {
   font-family: var(--mainEng-font);
   display: inline-block;
-  font-size: 1rem;
   font-weight: 600;
   padding: 10px 20px;
   background-color: rgba(255, 255, 255, 0.2);
@@ -133,17 +123,14 @@
   text-transform: capitalize;
 }
 #project #vslide .vSwiper .swiper-slide .project_desc li:hover {
-  background-color: #fff;
-  color: var(--mainColor100-color);
+  color: var(--mainColor-color);
 }
 #project #vslide .vSwiper .swiper-slide h3 {
-  font-size: 1.5rem;
   font-weight: 500;
   line-height: 54px;
   letter-spacing: 1px;
 }
 #project #vslide .vSwiper .swiper-slide p {
-  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
 }
@@ -151,37 +138,100 @@
 @media (max-width: 767px) {
   .project-box {
     width: 100%;
+    height: 50vh;
+    justify-content: center;
+    top: 380px;
   }
   .project-box .hSwiper {
     width: 95%;
+    height: 100%;
   }
-  .project-box .tabs {
-    display: none;
+  .project-box .tabs .tab-menu {
+    top: -25%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+  .project-box .tabs .tab-menu li {
+    width: 100px;
+  }
+  .project-box .tabs .tab-menu li:nth-child(even) {
+    position: relative;
+    top: 50px;
+  }
+  .project-box .tabs .tab-menu li a {
+    font-size: 1rem;
   }
   .project-box #vslide {
     display: none;
   }
 }
 @media (min-width: 768px) {
-  .project-box > div {
-    width: 50%;
-    border: 1px solid #f00;
+  .project-box {
+    top: 340px;
+    height: 50vh;
+    display: flex;
   }
-  .project-box .tabs {
-    display: none;
+  .project-box .tabs .tab-menu {
+    top: -80px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+  .project-box .tabs .tab-menu li a {
+    font-size: 1rem;
+  }
+  .project-box .hSwiper {
+    width: 50%;
   }
   .project-box .hSwiper .project figure figcaption {
     display: none;
   }
   .project-box #vslide {
+    width: 50%;
     display: flex;
+    overflow: hidden;
+  }
+  .project-box #vslide .swiper-slide h2 {
+    font-size: 2rem;
+  }
+  .project-box #vslide .swiper-slide .project_desc li {
+    font-size: 0.8rem;
+  }
+  .project-box #vslide .swiper-slide h3 {
+    font-size: 1.3rem;
+  }
+  .project-box #vslide .swiper-slide p {
+    font-size: 0.8rem;
   }
 }
 @media (min-width: 1024px) {
-  .project-box > div {
-    width: 33.333%;
+  .project-box {
+    top: 300px;
+    height: 55vh;
   }
   .project-box .tabs {
+    position: relative;
     display: block;
+    width: 30%;
+  }
+  .project-box .tabs .tab-menu {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+  }
+  .project-box .tabs .tab-menu li a {
+    width: 200px;
+    font-size: 1.5rem;
+  }
+  .project-box .tabs .tab-menu li a.on {
+    font-size: 2rem;
+  }
+  .project-box .hSwiper {
+    width: 30%;
+  }
+  .project-box #vslide {
+    width: 30%;
   }
 }
