--- a/src/css/pages/scss/graphic.scss
+++ b/src/css/pages/scss/graphic.scss
@@ -11,9 +11,8 @@
   .graphic__wrap {
     display: flex;
     align-items: center;
-    width: 200%;
     gap: 100px;
-    margin-top: 180px;
+    margin-top: 230px;
     padding-left: 120px;
   }
 
@@ -24,8 +23,10 @@
       cursor: pointer;
       border: 2px solid rgba(255, 255, 255, .5);
       padding: 15px;
+      transition: .35s;
 
       &:hover {
+        border: 2px solid rgba(48, 240, 226,1);
         a {
           &::after {
             opacity: 1;
@@ -43,7 +44,7 @@
         .num {
 
           em {
-            color: rgba(255, 255, 255, 1);
+            color: rgba(48, 240, 226,1);
           }
         }
       }
@@ -62,7 +63,6 @@
           left: 0;
           top: 0;
           background-color: rgba(0, 0, 0, .7);
-          // background-color: rgba(0, 48, 88,.7);
           transition: .5s;
         }
       }
@@ -79,8 +79,8 @@
         right: 0px;
         top: -45px;
         font-family: var(--mainNum-font);
-        font-size: 38px;
-        color: rgba(255, 255, 255, .5);
+        font-size: 32px;
+        color: rgba(255, 255, 255, .2);
         font-weight: 600;
         z-index: 99;
       }
@@ -154,36 +154,62 @@
   /* Animation */
   .parallax>use {
     animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
-  }
 
-  .parallax>use:nth-child(1) {
-    animation-delay: -2s;
-    animation-duration: 7s;
-  }
-
-  .parallax>use:nth-child(2) {
-    animation-delay: -3s;
-    animation-duration: 10s;
-  }
-
-  .parallax>use:nth-child(3) {
-    animation-delay: -4s;
-    animation-duration: 13s;
-  }
-
-  .parallax>use:nth-child(4) {
-    animation-delay: -5s;
-    animation-duration: 20s;
-  }
-
-  @keyframes move-forever {
-    0% {
-      transform: translate3d(-90px, 0, 0);
+    &:nth-child(1) {
+      animation-delay: -2s;
+      animation-duration: 7s;
     }
 
-    100% {
-      transform: translate3d(85px, 0, 0);
+    &:nth-child(2) {
+      animation-delay: -3s;
+      animation-duration: 10s;
+    }
+
+    &:nth-child(3) {
+      animation-delay: -4s;
+      animation-duration: 13s;
+    }
+
+    &:nth-child(4) {
+      animation-delay: -5s;
+      animation-duration: 20s;
+    }
+
+    @keyframes move-forever {
+      0% {
+        transform: translate3d(-90px, 0, 0);
+      }
+
+      100% {
+        transform: translate3d(85px, 0, 0);
+      }
     }
   }
 
+
+
+}
+
+@media (max-width:767px) {
+  #graphic {
+    .graphic__wrap {
+      width: 270%;
+    }
+  }
+}
+
+@media (min-width:768px) {
+  #graphic {
+    .graphic__wrap {
+      width: 250%;
+    }
+  }
+}
+
+@media (min-width:1024px) {
+  #graphic {
+    .graphic__wrap {
+      width: 200%;
+    }
+  }
 }
