--- a/src/css/pages/scss/header.scss
+++ b/src/css/pages/scss/header.scss
@@ -4,78 +4,43 @@
     top: 0;
     z-index: 999;
     width: 100%;
+    height: 50px;
     font-family: var(--mainEng-font);
-   
-    &::before{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(213, 239, 250, 0.1);
-        backdrop-filter: blur(30px);
-        z-index: -1;
-    }
 
-    .header_inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 1rem;
+    .header_nav {
+        text-align: center;
 
-        .header_logo {
-            font-family: var(--mainEng-font);
-            font-weight: 500;
-            font-size: 1.2rem;
-            text-align: center;
-            text-transform: uppercase;
-            line-height: 1.2;
-
-            em {
-                text-transform: capitalize;
-                font-size: 13px;
-                display: block;
-                color: var(--mainColor100-color);
-            }
-
-            li {
-                display: none;
-
-                &.intro_logo {
-                    display: block;
-                }
-            }
-        }
-
-        .header_nav {
-            margin-right: 50px;
+        ul {
 
             li {
                 display: inline-block;
-                font-family: var(--mainEng-font);
-                font-weight: 500;
+
+                &:hover {
+                    a {
+                        color: rgba(255, 255, 255, .7);
+                    }
+                }
 
                 a {
-                    text-transform: uppercase;
-                    font-size: 20px;
-                    font-weight: 600;
-                    padding: 15px;
                     position: relative;
-                    color: rgba(255,255,255,.8);
-
-                    &.on{
-                        color: var(--white);
-                    }
+                    color: rgba(255, 255, 255, .4);
+                    text-transform: uppercase;
+                    display: block;
+                    font-family: var(--mainEng-font);
+                    letter-spacing: 0.2em;
+                    font-size: 18px;
+                    font-weight: 500;
+                    padding: 15px;
+                    transition: .35s;
 
                     &::before {
                         content: '';
                         width: calc(100% - 20px);
-                        height: 2px;
-                        background-color: var(--white);
+                        height: 1px;
+                        background-color: var(--mainColor-color);
                         position: absolute;
                         left: 10px;
-                        bottom: 10px;
+                        bottom: 5px;
                         transition: .35s;
                         transform: scaleX(0);
                     }
@@ -84,47 +49,56 @@
                         transform: scaleX(1);
                     }
 
-                    &.on::before {
-                        transform: scaleX(1);
+                    &.on {
+                        color: var(--mainColor-color);
+
+                        &::before {
+                            transform: scaleX(1);
+                        }
                     }
                 }
             }
+
         }
 
-        .header_nav_mobile {
-            // display: none;
-            opacity: 0;
-            width: 40px;
-            height: 40px;
-            cursor: pointer;
+    }
 
-            span {
-                display: block;
+    .header_nav_mobile {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 10px;
+        opacity: 0;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+
+        span {
+            position: relative;
+            display: block;
+            width: 40px;
+            height: 2px;
+            background-color: var(--white);
+            margin-top: 20px;
+
+            &::before {
+                content: '';
                 width: 40px;
                 height: 2px;
                 background-color: var(--white);
-                position: relative;
-                margin-top: 20px;
+                position: absolute;
+                top: 10px;
+                right: 0;
+            }
 
-                &::before {
-                    content: '';
-                    width: 40px;
-                    height: 2px;
-                    background-color: var(--white);
-                    position: absolute;
-                    top: 10px;
-                    right: 0;
-                }
-
-                &::after {
-                    content: '';
-                    width: 40px;
-                    height: 2px;
-                    background-color: var(--white);
-                    position: absolute;
-                    bottom: 10px;
-                    left: 0;
-                }
+            &::after {
+                content: '';
+                width: 40px;
+                height: 2px;
+                background-color: var(--white);
+                position: absolute;
+                bottom: 10px;
+                left: 0;
             }
         }
     }
@@ -132,50 +106,50 @@
 }
 
 @media (max-width:767px) {
-    #header .header_inner .header_nav {
-        display: none;
+    #header {
+        .header_nav {
+            display: none;
 
-        &.show {
-            display: block;
+            &.show {
+                display: block;
 
-            ul {
-                position: absolute;
-                right: 0;
-                top: 68px;
-                background: var(--mainColor100-color);
-                z-index: 999;
-                min-width: 150px;
-                padding: 20px 10px;
+                ul {
+                    position: absolute;
+                    right: 0;
+                    top: 50px;
+                    background: rgba(0, 0, 0, .5);
+                    z-index: 999;
+                    min-width: 150px;
+                    padding: 20px 10px;
 
-                &+#header .header_inner .header_nav_mobile span {
-                    &::before {
-                        width: 20px;
+                    &+#header .header_nav_mobile span {
+                        &::before {
+                            width: 20px;
+                        }
+
+                        &::after {
+                            width: 20px;
+                        }
                     }
 
-                    &::after {
-                        width: 20px;
+                    li {
+                        display: block;
+                        text-align: right;
+
+                        a {
+                            display: inline-block;
+                            padding: 10px;
+                        }
                     }
                 }
 
-                li {
-                    display: block;
-                    text-align: right;
-
-                    a {
-                        display: inline-block;
-                        padding: 10px;
-                    }
-                }
             }
+        }
 
+        .header_nav_mobile {
+            opacity: 1;
         }
     }
-
-
-    #header .header_inner .header_nav_mobile {
-        opacity: 1;
-    }
-
 
 }
 
