--- a/style.css
+++ b/style.css
@@ -16,12 +16,14 @@
 @import url(./src/css/pages/title.css);
 @import url(./src/css/pages/path.css);
 @import url(./src/css/pages/bubble.css);
+@import url(./src/css/pages/jellyfish.css);
 
 @import '@splidejs/splide/css';
 
 
 body {
     will-change: background-color;
+    user-select: none;
 }
 
 section {
@@ -29,4 +31,5 @@ section {
     overflow: hidden;
     min-height: 100vh;
     contain: paint;
+    border: 1px solid #000;
 }
