--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -15,10 +15,6 @@
 
             .details {
                 padding: 10px;
-<<<<<<< HEAD
-=======
-                height: 100px;
->>>>>>> ac610dbbabaec0f2305c5b1b20f026bcf000a3c9
                 text-transform: capitalize;
             }
 
@@ -60,11 +56,7 @@
             left: 50%;
             transform: translateX(-50%);
             bottom: 5%;
-<<<<<<< HEAD
             width: 130px;
-=======
-            width: 120px;
->>>>>>> ac610dbbabaec0f2305c5b1b20f026bcf000a3c9
             height: 30px;
             border: 2px solid rgba(255, 255, 255, .5);
             border-radius: 50px;
@@ -110,7 +102,8 @@
 
     .work_list {
         opacity: 0;
-        width: 50%;
+        // width: 50%;
+        width: 100%;
         height: 100%;
         position: absolute;
         right: 0;
@@ -123,6 +116,7 @@
         transition: .5s;
 
         ul {
+            // width: 45%;
             width: 45%;
             margin-left: 80px;
 
@@ -259,7 +253,6 @@
                 transform: translate(-50%, -50%);
                 text-align: center;
                 padding-bottom: 80px;
-<<<<<<< HEAD
 
                 em{
                     width: auto;
@@ -269,8 +262,6 @@
                     font-size:.9rem;
                     white-space: nowrap;
                 }
-=======
->>>>>>> ac610dbbabaec0f2305c5b1b20f026bcf000a3c9
             }
         }
 
@@ -314,10 +305,6 @@
                 transform: translate(-50%, -50%);
                 text-align: center;
                 padding-bottom: 80px;
-<<<<<<< HEAD
-
-=======
->>>>>>> ac610dbbabaec0f2305c5b1b20f026bcf000a3c9
             }
         }
 
@@ -352,15 +339,12 @@
 
         .work_left {
             width: 50%;
-<<<<<<< HEAD
 
             .work_title{
                 .details{
                     height: 100px;
                 }
             }
-=======
->>>>>>> ac610dbbabaec0f2305c5b1b20f026bcf000a3c9
         }
 
         .container {
